tests/src/frontend/syntax/invalid/ternary.sk
fun main(): String {
  a ? b : c
}
